--- a/config/locales/server.he.yml
+++ b/config/locales/server.he.yml
@@ -219,7 +219,6 @@ he:
       page_publishing_requirements: "לא ניתן להפעיל פרסום עמודים אם מדיה מאובטחת פעילה."
       s3_backup_requires_s3_settings: "לא ניתן להשתמש ב־S3 כמיקום לגיבוי אלמלא סיפקת את ‚%{setting_name}’."
       s3_bucket_reused: "אין לך אפשרות להשתמש באותו הדלי עבור ‚s3_upload_bucket’ וגם ‚s3_backup_bucket’. נא לבחור בדלי שונה או להשתמש בנתיב שונה לכל דלי."
-      secure_uploads_requirements: "יש להפעיל העלאה ל־S3 בטרם הפעלת העלאות מאובטחות."
       share_quote_facebook_requirements: "עליך להגדיר מזהה יישומון פייסבוק כדי להפעיל שיתוף ציטוטים עבור פייסבוק"
       second_factor_cannot_enforce_with_socials: "לא ניתן לאכוף אימות דו־שלבי כאשר מופעלת כניסה דרך רשתות חברתיות. תחילה עליך להשבית כניסה דרך: %{auth_provider_names}"
       second_factor_cannot_be_enforced_with_disabled_local_login: "אי אפשר לאכוף אימות דו־שלבי אם כניסה מקומית מושבתת."
@@ -1708,6 +1707,7 @@ he:
     enable_badges: "הפעלת מערכת העיטורים"
     max_favorite_badges: "מספר העיטורים המרבי שמשתמש יכול לבחור"
     whispers_allowed_groups: "לאפשר תקשורת פרטית בתוך נושאים לחברים מקבוצות מסוימות."
+    hidden_post_visible_groups: "לאפשר לחברי קבוצות אלה להציג פוסטים מוסתרים. משתמשי סגל תמיד יכולים לצפות בהודעות נסתרות."
     allow_index_in_robots_txt: "יש לציין ב־robots.txt שמותר לאתר הזה להצטרף למאגר של מנועי החיפוש. במקרים יוצאי דופן, ניתן <a href='%{base_path}/admin/customize/robots'>לדרוס את robots.txt</a> באופן קבוע."
     blocked_email_domains: "רשימה מופרדת בקווים אנכיים של שמות תחום של כתובות דוא״ל אסורות לרישום. תת־תחומים מטופלים אוטומטית עבור שמות התחום שצוינו. אין תמיכה בתווי הכללה כגון * ו־?. למשל: mailinator.com|trashmail.net"
     allowed_email_domains: "רשימה מופרדת בקווים אנכיים של שמות תחום של כתובות דוא״ל שרק דרכן ניתן להירשם. תת־תחומים מטופלים אוטומטית עבור שמות התחום שצוינו. אין תמיכה בתווי הכללה כגון * ו־?. אזהרה: משתמשים עם דוא״ל משמות תחום שאינם ברשימה לא יורשו!"
