UX: Remove title and description block if blank (#21861)
If the description is empty then it does not make sense to keep the
quote block that contains just the title.

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -683,9 +683,7 @@ en:
     body: |
       We are so glad you joined us.
 
-      > ## %{site_title}
-      >
-      > %{site_description}
+      %{site_info_quote}
 
       Here are some things you can do to get started:
 
