--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -2866,6 +2866,11 @@ en:
         dismiss_tooltip: "Dismiss just new posts or stop tracking topics"
         also_dismiss_topics: "Stop tracking these topics so they never show up as unread for me again"
         dismiss_new: "Dismiss New"
+        dismiss_new_modal:
+          title: "Dismiss new"
+          topics: "Dismiss new topics"
+          posts: "Dismiss new posts"
+          untrack: "Stop tracking these topics so they stop appearing in my new list"
         dismiss_new_with_selected:
           one: "Dismiss New (%{count})"
           other: "Dismiss New (%{count})"
