--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4421,6 +4421,12 @@ en:
       more: "More"
       all_categories: "All categories"
       all_tags: "All tags"
+      categories_form:
+        save: "Save"
+        title: "Edit categories navigation"
+        filter_input:
+          placeholder: "Filter categories"
+
       sections:
         custom:
           add: "Add custom section"
